--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
+import pandas as pd
+dicservidores = {'nomeServidor': ['Adriana', 'Monica', 'Samara'], 'salario': [1200, 300, 5000]}
 
+dfservidores = pd.DataFrame(dicservidores)
+dfservidores
